--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
-### Hi there 👋
+<html>
+    <head>
+        <meta charset="UTF-8">
+        
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/leaflet.css">
+        <link rel="stylesheet" href="css/Control.FullScreen.css" />
+        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
+        <link rel="stylesheet" href="css/leaflet.zoomhome.css"/>
+        <link rel="stylesheet" href="css/Leaflet.Coordinates-0.1.5.css"/>
 
-<!--
-**cheveuxlulu/cheveuxlulu** is a ✨ _special_ ✨ repository because its `README.md` (this file) appears on your GitHub profile.
 
-Here are some ideas to get you started:
+        
+        <script type="text/javascript" src="js/jquery-3.7.1.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="js/leaflet.js"></script>
+        <script type="text/javascript" src="js/carte_avancee.js"></script>
+        <script src="js/Control.FullScreen.js"></script>
+        <script src="js/leaflet.zoomhome.min.js"></script>
+        <script src="js/Leaflet.Coordinates-0.1.5.min.js"></script>
 
-- 🔭 I’m currently working on ...
-- 🌱 I’m currently learning ...
-- 👯 I’m looking to collaborate on ...
-- 🤔 I’m looking for help with ...
-- 💬 Ask me about ...
-- 📫 How to reach me: ...
-- 😄 Pronouns: ...
-- ⚡ Fun fact: ...
--->
+    </head>
+    <body>
+        <div class = "container">
+          <div class = "alert alert-primary" role="alert">Ceci est ma page web</div>  
+        </div>
+    </body>
+</html>
